# spring-lsp

./: .gitignore  .summer-lsp.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build-extension.yml  release.yml
docs/: CHANGELOG_MULTI_CRATE.md  LOCAL_CONFIG_SUPPORT.md  MULTI_CRATE_WORKSPACE.md  SCHEMA_WORKFLOW.md  TESTING_GUIDE.md  TESTING_SUMMARY.md
examples/: check_schema.rs  generate_schema_simple.rs  test_local_schema.rs  test_nested_config.rs  test_schema_loading.rs  validate_nested_config.rs  validate_simple_nested.rs  validate_user_config.rs  validate_with_local_schema.rs
examples/schema_generator/: Cargo.toml  main.rs
examples/test_local_config/src/: config.rs
src/: lib.rs  main.rs
src/analysis/completion/: engine_impl.rs  mod.rs
src/analysis/diagnostic/: mod.rs
src/analysis/rust/: macro_analyzer.rs
src/analysis/toml/: mod.rs  toml_analyzer.rs
src/analysis/validation/: di_validator.rs
src/core/: config.rs  schema.rs
src/protocol/: server.rs
src/protocol/handlers/: custom.rs
src/scanner/: component.rs  job.rs  plugin.rs  route.rs
src/utils/: error.rs  logging.rs  status.rs
vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  webpack.config.js
vscode/docs/: DEBUG_EXTENSION.md  PACKAGING_GUIDE.md
vscode/scripts/: build-server-current.sh  build-server.sh  package-extension.sh
vscode/src/: extension.ts  global.d.ts
vscode/src/commands/: index.ts
vscode/src/controllers/: LocalAppController.ts  LocalAppManager.ts
vscode/src/models/: AppState.ts  index.ts  (+1 more)
(+20 files in other folders)
