[package]
name = "summer-lsp"
version = "0.2.0"
edition = "2021"
authors = ["summer-rs contributors"]
license = "MIT OR Apache-2.0"
description = "Language Server Protocol implementation for summer-rs framework"
repository = "https://github.com/summer-rs/summer-lsp"
keywords = ["lsp", "language-server", "summer-rs", "toml", "rust"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# LSP 协议实现
lsp-server = "0.7"
lsp-types = "0.95"

# TOML 处理
taplo = "0.13"

# Rust 语法解析
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 并发数据结构
dashmap = "5.5"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 目录路径
dirs = "5.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# URL 处理
url = "2.5"

# HTTP 客户端（用于加载 Schema）
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# 正则表达式
regex = "1.10"

# 目录遍历
walkdir = "2.4"

# JSON Schema 生成
schemars = "0.8"

# 终端检测（用于日志颜色）
atty = "0.2"

[dev-dependencies]
# 属性测试
proptest = "1.4"

# 测试工具
tempfile = "3.8"
pretty_assertions = "1.4"
serial_test = "3.1"

[[bin]]
name = "summer-lsp"
path = "src/main.rs"

[lib]
name = "summer_lsp"
path = "src/lib.rs"
